--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
         {
           "id": "ruankao",
           "title": "软考",
-          "icon": "images/ruankaoIcon.svg"
+          "icon": "images/m.svg"
         }
       ]
     },
