--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ruankao-help",
   "displayName": "ruankao-help",
   "description": "软考刷题",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.88.0"
   },
@@ -104,6 +104,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "file-loader": "^6.2.0",
     "node-fetch": "^3.3.2"
   }
 }
