--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ruankao-help",
   "displayName": "ruankao-help",
   "description": "软考刷题",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "engines": {
     "vscode": "^1.88.0"
   },
@@ -76,18 +76,18 @@
           "name": "初级"
         }
       ]
-    }
+    },
+    "iconThemes": [
+      {
+          "id": "iconTheme",
+          "label": "图标主题",
+          "path": "./theme/icon-theme.json"
+      }
+  ]
   },
   "scripts": {
-    "vscode:prepublish": "pnpm run package",
-    "compile": "webpack",
-    "watch": "webpack --watch",
-    "package": "webpack --mode production --devtool hidden-source-map",
-    "compile-tests": "tsc -p . --outDir out",
-    "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "pnpm run compile-tests && pnpm run compile && pnpm run lint",
-    "lint": "eslint src --ext ts",
-    "test": "vscode-test"
+    "postinstall": "node ./node_modules/vscode/bin/install",
+    "test": "node ./node_modules/vscode/bin/test"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.6",
@@ -101,7 +101,8 @@
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "vscode": "^1.1.6"
   },
   "dependencies": {
     "file-loader": "^6.2.0",
