--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ruankao-help",
   "displayName": "ruankao-help",
   "description": "软考刷题",
-  "version": "0.0.5",
+  "version": "0.0.8",
   "engines": {
     "vscode": "^1.88.0"
   },
@@ -17,6 +17,7 @@
   "activationEvents": [
     "*"
   ],
+  "icon": "images/m.png",
   "main": "./dist/extension.js",
   "contributes": {
     "configuration": {
@@ -55,9 +56,9 @@
     "viewsContainers": {
       "activitybar": [
         {
-          "id": "ruankao",
+          "id": "ruankao-help",
           "title": "软考",
-          "icon": "images/m.svg"
+          "icon": "images/m.png"
         }
       ]
     },
@@ -76,18 +77,18 @@
           "name": "初级"
         }
       ]
-    },
-    "iconThemes": [
-      {
-          "id": "iconTheme",
-          "label": "图标主题",
-          "path": "./theme/icon-theme.json"
-      }
-  ]
+    }
   },
   "scripts": {
-    "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "node ./node_modules/vscode/bin/test"
+    "vscode:prepublish": "pnpm run package",
+    "compile": "webpack",
+    "watch": "webpack --watch",
+    "package": "webpack --mode production --devtool hidden-source-map",
+    "compile-tests": "tsc -p . --outDir out",
+    "watch-tests": "tsc -p . -w --outDir out",
+    "pretest": "pnpm run compile-tests && pnpm run compile && pnpm run lint",
+    "lint": "eslint src --ext ts",
+    "test": "vscode-test"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.6",
